Cambios Rede Social 10-07-2016

--- a/index.html
+++ b/index.html
@@ -81,11 +81,7 @@
 	 				<img src="./images/logo.png" alt="Logo">
 	 			</div> <!-- HEADER LOGO -->
 	 			<div class="header-social-icons"> <!-- HEADER SOCIAL ICONS -->
-					<a href="#"><i class="hovicon effect-7 sub-b fa fa-facebook-square "></i></a>
-					<a href="#"><i class="hovicon effect-7 sub-b fa fa-twitter-square "></i></a>
-					<a href="#"><i class="hovicon effect-7 sub-b fa fa-linkedin-square "></i></a>
-					<a href="#"><i class="hovicon effect-7 sub-b fa fa-github-square"></i></a>
-					<a href="#"><i class="hovicon effect-7 sub-b fa fa-google-plus-square "></i></a>
+					<a href="https://www.facebook.com/DIF-Temoaya-652882971518524/?fref=ts"><i class="hovicon effect-7 sub-b fa fa-facebook-square "></i></a>
 				</div>
 	 			<div class="header-text">
 	 				<H1><span class=wodry>Sistema Integral para el Desarrollo Integral de la Familia del Municipio de Temoaya
