--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
  	<!-- =========================
  	     FEATURE  AREA
  	============================== -->
+	<!-- Comment
  	<section id="section-2" class="feature-section">
  		<div class="container">
  			<div class="row">
@@ -115,7 +116,7 @@
  							<p>Lorem lean startup ipsum product market fit customer development acquihire technical cofounder. User engagement. </p>
  						</div>
  					</div>
- 				</div> <!-- SINGLE FEATURE -->
+ 				</div> -- SINGLE FEATURE
  				<div class="col-md-3 col-sm-6">
  					<div class="single-feature border-from-bottom">
  						<div class="feature-icon">
@@ -126,7 +127,7 @@
  							<p>Lorem lean startup ipsum product market fit customer development acquihire technical cofounder. User engagement. </p>
  						</div>
  					</div>
- 				</div> <!-- SINGLE FEATURE -->
+ 				</div> -- SINGLE FEATURE
  				<div class="col-md-3 col-sm-6">
  					<div class="single-feature border-from-bottom">
  						<div class="feature-icon">
@@ -137,7 +138,7 @@
  							<p>Lorem lean startup ipsum product market fit customer development acquihire technical cofounder. User engagement. </p>
  						</div>
  					</div>
- 				</div> <!-- SINGLE FEATURE -->
+ 				</div> -- SINGLE FEATURE
  				<div class="col-md-3 col-sm-6">
  					<div class="single-feature border-from-bottom">
  						<div class="feature-icon">
@@ -148,8 +149,8 @@
  							<p>Lorem lean startup ipsum product market fit customer development acquihire technical cofounder. User engagement. </p>
  						</div>
  					</div>
- 				</div> <!-- SINGLE FEATURE -->
- 			</div>
+ 				</div> -- SINGLE FEATURE
+ 			</div> -->
 
 
  		</div>
@@ -159,6 +160,7 @@
  	<!-- =========================
  	     ABOUT  AREA
  	============================== -->
+	<!--
  	<section id="section-3" class="about-section section-bg-color">
  		<div class="container">
  			<div class="row">
@@ -182,7 +184,7 @@
  										<h6>Fantastic</h6>
  										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
  									</div>
- 								</div> <!-- SINGLE-FEATURE LIST -->
+ 								</div> -- SINGLE-FEATURE LIST
  								<div class="single-list-item">
  									<div class="about-list-icon pull-left">
  										<i class="fa fa-share"></i>
@@ -192,7 +194,7 @@
  										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
  										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
  									</div>
- 								</div> <!-- SINGLE-FEATURE LIST -->
+ 								</div> -- SINGLE-FEATURE LIST
  								<div class="single-list-item">
  									<div class="about-list-icon pull-left">
  										<i class="fa fa-share"></i>
@@ -201,7 +203,7 @@
  										<h6>Mobile-Friendly</h6>
  										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
  									</div>
- 								</div> <!-- SINGLE-FEATURE LIST -->
+ 								</div> -- SINGLE-FEATURE LIST
  							</div>
  						</div>
  					</div>
@@ -213,11 +215,12 @@
  				</div>
  			</div>
  		</div>
- 	</section>
+ 	</section> -->
 
  	<!-- =========================
  	     VIDEO DEMO  AREA
  	============================== -->
+	<!--
  	<section id="section-4" class="video-section section-bg-color">
  		<div class="container">
  			<div class="row">
@@ -231,16 +234,16 @@
  					<div class="video-container">
 
 
-						<!-- <div class="video">
+						-- <div class="video">
 
 							<iframe src="//player.vimeo.com/video/7449107?color=56C201" width="600" height="338" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-						</div> -->
+						</div>
 
 
 
 						<div class="video">
 
-							<!-- <iframe width="640" height="360" src="https://www.youtube.com/embed/bZx8rPd-PKQ" frameborder="0" allowfullscreen></iframe> -->
+							-- <iframe width="640" height="360" src="https://www.youtube.com/embed/bZx8rPd-PKQ" frameborder="0" allowfullscreen></iframe>
 						</div>
 
 					</div>
@@ -258,7 +261,7 @@
  										<h6>Fantastic</h6>
  										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
  									</div>
- 								</div> <!-- SINGLE-FEATURE LIST -->
+ 								</div> -- SINGLE-FEATURE LIST
  								<div class="single-list-item">
  									<div class="about-list-icon pull-left">
  										<i class="fa fa-share"></i>
@@ -267,7 +270,7 @@
  										<h6>Cool</h6>
  										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
  									</div>
- 								</div> <!-- SINGLE-FEATURE LIST -->
+ 								</div> <!-- SINGLE-FEATURE LIST
  								<div class="single-list-item">
  									<div class="about-list-icon pull-left">
  										<i class="fa fa-share"></i>
@@ -276,7 +279,7 @@
  										<h6>Simple</h6>
  										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
  									</div>
- 								</div> <!-- SINGLE-FEATURE LIST -->
+ 								</div> <!-- SINGLE-FEATURE LIST
  								<div class="single-list-item">
  									<div class="about-list-icon pull-left">
  										<i class="fa fa-share"></i>
@@ -285,19 +288,20 @@
  										<h6>Flexible</h6>
  										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
  									</div>
- 								</div> <!-- SINGLE-FEATURE LIST -->
+ 								</div> <!-- SINGLE-FEATURE LIST
  							</div>
- 						</div> <!-- LEFT-ABOUT -->
+ 						</div> <!-- LEFT-ABOUT
  					</div>
  				</div>
  			</div>
  		</div>
- 	</section>
+ 	</section> -->
 
 
  	<!-- =========================
  	     TESTIMONIAL  AREA
  	============================== -->
+	<!--
  	<section id="section-5" class="testimonial-section">
  		<div class="container">
  			<div class="section-heading">
@@ -325,7 +329,7 @@
 						</div>
 					</div>
 
-				</div> <!-- SINGLE-TESTIMONIAL -->
+				</div> -- SINGLE-TESTIMONIAL
 				<div class="testimonial-iteam item col-md-8 col-md-offset-2">
 					<div class="quote-icon pull-left">
 						<i class="fa fa-quote-left"></i>
@@ -342,7 +346,7 @@
 							<p>Bokol Auto LTD</p>
 						</div>
 					</div>
-				</div> <!-- SINGLE-TESTIMONIAL -->
+				</div> -- SINGLE-TESTIMONIAL
 
 				<div class="testimonial-iteam item col-md-8 col-md-offset-2">
 					<div class="quote-icon pull-left">
@@ -360,24 +364,23 @@
 							<p>Bokol Auto LTD</p>
 						</div>
 					</div>
-				</div> <!-- SINGLE-TESTIMONIAL -->
+				</div> -- SINGLE-TESTIMONIAL
  			</div>
  		</div>
 
- 	</section>
+ 	</section> -->
 
  		<!-- =========================
  		     FAQ  AREA
  		============================== -->
-
-
+		<!--
     	<section id="section-6" class="faq-section section-bg-color">
     		<div class="container">
     			<div class="row">
     				<div class="section-heading">
     					<h2>Frequently Asked Questions</h2>
     					<h4>Got questions? We have got answers</h4>
-    				</div> <!-- FAQ HEADER -->
+    				</div> -- FAQ HEADER
     			</div>
     			<div class="row">
     				<div class="col-md-6">
@@ -392,7 +395,7 @@
     						<p>Our 10 day trial is 100% free and does not require credit card information to start. If at the end of your trial you would like to upgrade, great. If not, you can cancel your account altogether, or let us mark it as inactive for you to come back to later.</p>
     					</div>
     				</div>
-    			</div> <!-- FIRST SECTION OF QUESTIONS -->
+    			</div> -- FIRST SECTION OF QUESTIONS
     			<div class="row">
     				<div class="col-md-6">
     					<div class="single-faq text-left">
@@ -406,7 +409,7 @@
     						<p>Our 10 day trial is 100% free and does not require credit card information to start. If at the end of your trial you would like to upgrade, great. If not, you can cancel your account altogether, or let us mark it as inactive for you to come back to later.</p>
     					</div>
     				</div>
-    			</div> <!-- SECOND SECTION OF QUESTION -->
+    			</div> -- SECOND SECTION OF QUESTION
     			<div class="row">
     				<div class="col-md-6">
     					<div class="single-faq text-left">
@@ -420,14 +423,14 @@
     						<p>Our 10 day trial is 100% free and does not require credit card information to start. If at the end of your trial you would like to upgrade, great. If not, you can cancel your account altogether, or let us mark it as inactive for you to come back to later.</p>
     					</div>
     				</div>
-    			</div> <!-- THIRD SECTION OF QUESTION -->
+    			</div> --THIRD SECTION OF QUESTION
     		</div>
-    	</section>
+    	</section> -->
 
  		<!-- =========================
  		     PRICING TABLE  AREA
  		============================== -->
-
+<!--
  		<section id="section-7" class="pricing-table section-bg-color-second">
  			<div class="container">
  				<div class="row">
@@ -448,7 +451,7 @@
  							</div>
  							<a class="btn standard-button" href="#">GET IT NOW</a>
  						</div>
- 					</div> <!-- SINGLE PRICING TABLE -->
+ 					</div> -- SINGLE PRICING TABLE
  					<div class="col-md-3 col-sm-6">
  						<div class="single-pricing-table">
  							<div class="pricing-head">
@@ -460,7 +463,7 @@
  							</div>
  							<a class="btn standard-button" href="#">GET IT NOW</a>
  						</div>
- 					</div> <!-- SINGLE PRICING TABLE -->
+ 					</div> -- SINGLE PRICING TABLE
  					<div class="col-md-3 col-sm-6">
  						<div class="single-pricing-table">
  							<div class="pricing-head">
@@ -472,7 +475,7 @@
  							</div>
  							<a class="btn standard-button" href="#">GET IT NOW</a>
  						</div>
- 					</div> <!-- SINGLE PRICING TABLE -->
+ 					</div> -- SINGLE PRICING TABLE
  					<div class="col-md-3 col-sm-6">
  						<div class="single-pricing-table">
  							<div class="pricing-head">
@@ -484,23 +487,22 @@
  							</div>
  							<a class="btn standard-button" href="#">GET IT NOW</a>
  						</div>
- 					</div> <!-- SINGLE PRICING TABLE -->
+ 					</div> -- SINGLE PRICING TABLE
  				</div>
  			</div>
- 		</section>
-
-
+ 		</section> -->
  		<!-- =========================
  		     EMAIL-SUBSCRIBTION  AREA
  		============================== -->
- 		<section id="section-8" class="email-subscribtion-section">
+<!--
+		<section id="section-8" class="email-subscribtion-section">
  			<div class="color-overlay">
 	 			<div class="container">
 	 				<div class="subscribtion-heading">
 	 					<h2>sing up today to be notified when we
 launch!</h2>
 	 					<h4>Don't Forget To Subscritbe with Your E-mail</h4>
-	 				</div> <!-- SUBSCRIBTION HEADING -->
+	 				</div> -- SUBSCRIBTION HEADING
 
 	 				<div class="subscribtion-form">
 	 					<div class="subcribtion-inputs">
@@ -513,32 +515,33 @@ launch!</h2>
 								<span class="input__label-content input__label-content--madoka">Your E-mail Please...</span>
 							</label>
 							</span>
-	 					</div> <!-- SUBSCRIBTION INPUTS -->
+	 					</div> -- SUBSCRIBTION INPUTS
 	 					<div class="subscribtion-button">
 	 						<a href="#" class="btn-lg standard-button">GIVE ME UPDATE</a>
 	 					</div>
 
-	 				</div> <!-- SUBSCRIBTION FORM  -->
+	 				</div> -- SUBSCRIBTION FORM
 	 			</div>
-	 		</div> <!-- COLOR OVERLAY -->
- 		</section>
+	 		</div> -- COLOR OVERLAY
+ 		</section> -->
 
 
 		<!-- =========================
 		   FOOTER  AREA
 		============================== -->
+<!--
 		<footer id="section-9" class="section-bg-color">
 			<div class="container">
 				<div class="footer-logo hover-grow-shadow">
 					<img src="./images/logo-dark.png" alt="Logo">
-				</div> <!-- FOOTER LOGO -->
+				</div> -- FOOTER LOGO
 
 				<div class="copyright-text">
 					<p>&copy;2015 Landro - Template LLC</p>
-				</div> <!-- COPYRIGHT TEXT -->
+				</div> -- COPYRIGHT TEXT
 
-			</div> <!-- CONTAINER CLOSE HERE -->
-		</footer>
+			</div> -- CONTAINER CLOSE HERE
+		</footer> -->
 		<!-- =========================
 		     SCRIPTS   AREA
 		============================== -->
