--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
-<!-- -------------------------------------------------------------------------------------------------------------------
-------------------------------------------------------------------------------------------------------------------------
+<!-- =================================================================
 																				I N D E X   -    D I F    T E M O A Y A
-------------------------------------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------------------------------- -->
+================================================================== -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -96,7 +94,7 @@
  	<!-- =========================
  	     FEATURE  AREA
  	============================== -->
-	<!-- Comment
+	<!--
  	<section id="section-2" class="feature-section">
  		<div class="container">
  			<div class="row">
@@ -116,7 +114,7 @@
  							<p>Lorem lean startup ipsum product market fit customer development acquihire technical cofounder. User engagement. </p>
  						</div>
  					</div>
- 				</div> -- SINGLE FEATURE
+ 				</div> <!-- SINGLE FEATURE
  				<div class="col-md-3 col-sm-6">
  					<div class="single-feature border-from-bottom">
  						<div class="feature-icon">
@@ -127,7 +125,7 @@
  							<p>Lorem lean startup ipsum product market fit customer development acquihire technical cofounder. User engagement. </p>
  						</div>
  					</div>
- 				</div> -- SINGLE FEATURE
+ 				</div> <!-- SINGLE FEATURE
  				<div class="col-md-3 col-sm-6">
  					<div class="single-feature border-from-bottom">
  						<div class="feature-icon">
@@ -138,7 +136,7 @@
  							<p>Lorem lean startup ipsum product market fit customer development acquihire technical cofounder. User engagement. </p>
  						</div>
  					</div>
- 				</div> -- SINGLE FEATURE
+ 				</div> <!-- SINGLE FEATURE
  				<div class="col-md-3 col-sm-6">
  					<div class="single-feature border-from-bottom">
  						<div class="feature-icon">
@@ -149,12 +147,10 @@
  							<p>Lorem lean startup ipsum product market fit customer development acquihire technical cofounder. User engagement. </p>
  						</div>
  					</div>
- 				</div> -- SINGLE FEATURE
- 			</div> -->
-
-
+ 				</div> <!-- SINGLE FEATURE
+ 			</div>
  		</div>
- 	</section>
+ 	</section> -->
 
 
  	<!-- =========================
@@ -184,7 +180,7 @@
  										<h6>Fantastic</h6>
  										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
  									</div>
- 								</div> -- SINGLE-FEATURE LIST
+ 								</div> <!-- SINGLE-FEATURE LIST
  								<div class="single-list-item">
  									<div class="about-list-icon pull-left">
  										<i class="fa fa-share"></i>
@@ -194,7 +190,7 @@
  										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
  										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
  									</div>
- 								</div> -- SINGLE-FEATURE LIST
+ 								</div> <!-- SINGLE-FEATURE LIST
  								<div class="single-list-item">
  									<div class="about-list-icon pull-left">
  										<i class="fa fa-share"></i>
@@ -203,7 +199,7 @@
  										<h6>Mobile-Friendly</h6>
  										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
  									</div>
- 								</div> -- SINGLE-FEATURE LIST
+ 								</div> <!-- SINGLE-FEATURE LIST
  							</div>
  						</div>
  					</div>
@@ -234,7 +230,7 @@
  					<div class="video-container">
 
 
-						-- <div class="video">
+						<!-- <div class="video">
 
 							<iframe src="//player.vimeo.com/video/7449107?color=56C201" width="600" height="338" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 						</div>
@@ -243,7 +239,7 @@
 
 						<div class="video">
 
-							-- <iframe width="640" height="360" src="https://www.youtube.com/embed/bZx8rPd-PKQ" frameborder="0" allowfullscreen></iframe>
+							<!-- <iframe width="640" height="360" src="https://www.youtube.com/embed/bZx8rPd-PKQ" frameborder="0" allowfullscreen></iframe>
 						</div>
 
 					</div>
@@ -261,7 +257,7 @@
  										<h6>Fantastic</h6>
  										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
  									</div>
- 								</div> -- SINGLE-FEATURE LIST
+ 								</div> <!-- SINGLE-FEATURE LIST
  								<div class="single-list-item">
  									<div class="about-list-icon pull-left">
  										<i class="fa fa-share"></i>
@@ -329,7 +325,7 @@
 						</div>
 					</div>
 
-				</div> -- SINGLE-TESTIMONIAL
+				</div> <!-- SINGLE-TESTIMONIAL
 				<div class="testimonial-iteam item col-md-8 col-md-offset-2">
 					<div class="quote-icon pull-left">
 						<i class="fa fa-quote-left"></i>
